fix overflow

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,9 @@
-mat-sidenav-container,
-mat-sidenav-content,
-mat-sidenav {
-  height: 100%;
+mat-drawer-container {
+  width: 100%;
 }
-mat-sidenav {
-  width: 250px;
+
+mat-drawer-content {
+  overflow: inherit;
 }
 
 main {
