--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,3 @@ body {
   box-sizing: border-box;
   height: 100vh;
 }
-.mat-drawer-content {
-  overflow: initial !important;
-}
